bookinfo-bl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-maheshprom-argocd
    kubernetes.io/ingress.class: nginx
  name: bookinfo-bl
spec:
  rules:
  - host: bookinfobl.argo.ninja-test.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: productpage
            port:
              number: 9080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bookinfobl.argo.ninja-test.opsmx.org
    secretName: bookinfo-bl-tls-certificate
